# dept-dash

./: README.md
backend/: Pipfile  fixtures.json  pyproject.toml
backend/auth/: views.py
backend/backend/: celery.py  urls.py
backend/backend/settings/: __init__.py  base.py  development.py  production.py
backend/lor_tracker/: serializers.py  tasks.py  urls.py
backend/lor_tracker/api/: faculty.py  hod.py  student.py
backend/lor_tracker/validations/: validate_lor_submission.py
backend/research/tests/: test_views.py
backend/users/: permissions.py  serializers.py  views.py  viewsets.py
backend/users/tests/: test_models.py  test_views.py
frontend/: package-lock.json  package.json
