[tool.poetry]
name = "dept-dash"
version = "0.1.0"
description = ""
authors = ["Krut Patel <kroot.patel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7, <3.9"
django = "^3.0.6"
djangorestframework = "^3.11.0"
django-cors-headers = "^3.2.1"
social-auth-core = "^3.3.3"
social-auth-app-django = "^3.1.0"
djangorestframework-simplejwt = "^4.4.0"
pillow = "^7.1.2"
drf-extensions = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pyyaml = "^5.3.1"
uritemplate = "^3.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
